log
Thu 04 May 2023 12:30:48 AM UTC: 
 tests:  0|5
total_score: 0/70
d8d33d3
Thu 04 May 2023 12:32:27 AM UTC: 
 sudoku.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:62:7: error: implicit declaration of function ‘insertBack’ [-Werror=implicit-function-declaration]
   62 |       insertBack(list,new_node);
      |       ^~~~~~~~~~
sudoku.c:64:11: error: returning ‘List *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Werror=int-conversion]
   64 |    return list;
      |           ^~~~
cc1: all warnings being treated as errors
Compilation failed
828a5c6
Thu 04 May 2023 12:32:38 AM UTC: 
 sudoku.c | 19 +------------------
 1 file changed, 1 insertion(+), 18 deletions(-)
 tests:  0|5
total_score: 0/70
485cc74
Thu 04 May 2023 12:53:16 AM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  2|4
total_score: 15/70
be7578b
Thu 04 May 2023 02:05:30 AM UTC: 
 sudoku.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:73:14: error: ‘p’ undeclared (first use in this function)
   73 |         for (p = 0; p < 9; p++) {
      |              ^
sudoku.c:73:14: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
75d2934
Thu 04 May 2023 02:05:53 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
deb301d
Thu 04 May 2023 02:06:07 AM UTC: 
 sudoku.c | 34 ----------------------------------
 1 file changed, 34 deletions(-)
 tests:  2|4
total_score: 15/70
0136cb3
Thu 04 May 2023 02:15:58 AM UTC: 
 sudoku.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
 tests:  5|3
total_score: 35/70
72d9207
Thu 04 May 2023 02:17:42 AM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|2
total_score: 45/70
ee858d8
Thu 04 May 2023 02:22:16 AM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  7|1
total_score: 55/70
6bfd25b
Thu 04 May 2023 02:26:57 AM UTC: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:129:5: error: ‘stack’ undeclared (first use in this function); did you mean ‘Stack’?
  129 |     stack<Node*> S;
      |     ^~~~~
      |     Stack
sudoku.c:129:5: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:129:11: error: expected expression before ‘Node’
  129 |     stack<Node*> S;
      |           ^~~~
sudoku.c:130:5: error: ‘S’ undeclared (first use in this function)
  130 |     S.push(n);
      |     ^
sudoku.c:130:12: error: ‘n’ undeclared (first use in this function)
  130 |     S.push(n);
      |            ^
sudoku.c:138:13: error: implicit declaration of function ‘isFinalState’ [-Werror=implicit-function-declaration]
  138 |         if (isFinalState(curr)) {
      |             ^~~~~~~~~~~~
sudoku.c:142:9: error: ‘vector’ undeclared (first use in this function)
  142 |         vector<Node*> neighbors = getNeighbors(curr);
      |         ^~~~~~
sudoku.c:142:16: error: expected expression before ‘Node’
  142 |         vector<Node*> neighbors = getNeighbors(curr);
      |                ^~~~
sudoku.c:143:29: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘:’ token
  143 |         for (Node* neighbor : neighbors) {
      |                             ^
sudoku.c:144:20: error: ‘neighbor’ undeclared (first use in this function)
  144 |             S.push(neighbor);
      |                    ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4f5969d
Thu 04 May 2023 02:27:01 AM UTC: 
 sudoku.c | 20 --------------------
 1 file changed, 20 deletions(-)
 tests:  7|1
total_score: 55/70
f179c40
